--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bouchiba Mohammed ",
+"name": "bouchiba-mohammed",
   "version": "1.0.0",
   "description": "Une application desktop construite avec Electron.",
   "main": "main.js",
@@ -44,3 +44,4 @@
     "version": "26.0.0"
   }
 }
+
